refactor: add android module + use constants

--- a/expo-module.config.json
+++ b/expo-module.config.json
@@ -8,5 +8,10 @@
     "modules": [
       "ExpoTestFlightModule"
     ]
+  },
+  "android": {
+    "modules": [
+      "expo.modules.testflight.ExpoTestFlightModule"
+    ]
   }
 }
