--- a/expo-module.config.json
+++ b/expo-module.config.json
@@ -1,17 +1,10 @@
 {
   "platforms": [
-    "apple",
-    "android",
-    "web"
+    "apple"
   ],
   "apple": {
     "modules": [
       "ExpoTestFlightModule"
-    ]
-  },
-  "android": {
-    "modules": [
-      "expo.modules.testflight.ExpoTestFlightModule"
     ]
   }
 }
